@@ -1,0 +1,3 @@
+MD5 91a572f80dd5a9af5a0f7f207fd34478 siproxd-0.5.13.tar.gz 223109
+RMD160 c5917e47655aa363d6c72ab5a0836cdef002b39a siproxd-0.5.13.tar.gz 223109
+SHA256 b419e2642cff2aea43ebd32139e2fe345003347d09e1a8dc6a289fdc08c1f7cd siproxd-0.5.13.tar.gz 223109
