@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/siproxd
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/siproxd/ChangeLog,v 1.2 2005/09/22 23:24:06 stkn Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/siproxd/ChangeLog,v 1.3 2006/11/14 22:10:51 drizzt Exp $
+
+*siproxd-0.5.13 (14 Nov 2006)
+
+  14 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> +siproxd-0.5.13.ebuild:
+  Version bump and fixed chowns wrt bug #132284.
+  Thanks to Janne Liimatainen and Randy McCaskill.
 
   23 Sep 2005; Stefan Knoblich <stkn@gentoo.org> files/siproxd.rc6,
   siproxd-0.5.11.ebuild:
